[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generator project"
authors = [
    { name="mgomes-v" },
    { name="rcarmo-d" }
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy"
]